add namespace to build.gradle (kotlin project)

--- a/ApiDemos/kotlin/app/build.gradle
+++ b/ApiDemos/kotlin/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
 }
 
 android {
+    namespace 'com.example.kotlindemos'
     compileSdkVersion 33
     defaultConfig {
         applicationId "com.example.kotlindemos"
